# minilang_compiler

./: .gitignore  Cargo.toml  README.md  vercel.json
examples/: hello  hello.mini
minilang-code/: run  run.mini
src/: ast.rs  cli.rs  codegen.rs  errors.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  symbol_table.rs  test_utils.rs  type_checker.rs  wasm.rs
src/analyzer/: basic.rs  cognitive.rs  cyclomatic.rs  fanout.rs  halstead.rs  mod.rs  nesting.rs
tests/: codgen_tests.rs  lexer_error_tests.rs  lexer_integration_tests.rs  lexer_test.rs  optimizer_edge_cases.rs  optimizer_integration_tests.rs  optimizer_test.rs  parser_edge_cases.rs  parser_error_tests.rs  parser_integration_tests.rs  parser_test.rs  semantic_edge_cases.rs  semantic_function_tests.rs  semantic_scope_tests.rs  semantic_tests.rs
web/: index.html  script.js  styles.css  vercel.json
web/examples/: bubble_sort.mini  factorial.mini  fibonacci.mini  hello.mini  prime_numbers.mini
web/pkg/: README.md  minilang_compiler.d.ts  minilang_compiler.js  minilang_compiler_bg.wasm  minilang_compiler_bg.wasm.d.ts  package.json
